<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<TextView android:text="@string/hello" android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:textSize="25sp" android:gravity="center"/>
	<EditText android:layout_height="wrap_content"
		android:layout_width="match_parent" android:id="@+id/input"
		android:hint="@string/input_hint" android:inputType="number"
		android:gravity="right" />
	<RadioGroup android:orientation="horizontal"
		android:layout_width="match_parent" android:id="@+id/type"
		android:layout_height="wrap_content">
		<RadioButton android:layout_height="wrap_content"
			android:checked="true" android:id="@+id/type_fib_jr" android:text="@string/type_fib_jr"
			android:layout_width="match_parent" android:layout_weight="1" />
		<RadioButton android:layout_height="wrap_content"
			android:id="@+id/type_fib_ji" android:text="@string/type_fib_ji"
			android:layout_width="match_parent" android:layout_weight="1" />
		<RadioButton android:layout_height="wrap_content"
			android:id="@+id/type_fib_nr" android:text="@string/type_fib_nr"
			android:layout_width="match_parent" android:layout_weight="1" />
		<RadioButton android:layout_height="wrap_content"
			android:id="@+id/type_fib_ni" android:text="@string/type_fib_ni"
			android:layout_width="match_parent" android:layout_weight="1" />
	</RadioGroup>
	<Button android:text="@string/button_text" android:id="@+id/button"
		android:layout_width="match_parent" android:layout_height="wrap_content" />
	<TextView android:id="@+id/output" android:layout_width="match_parent"
		android:layout_height="match_parent" android:textSize="20sp" android:gravity="center|top"/>
</LinearLayout>
